[gd_scene load_steps=4 format=3 uid="uid://cc5hvmuswmyyv"]

[ext_resource type="Texture2D" uid="uid://bccm6r8f4lhw7" path="res://Assets/Arts/InventoryBack.png" id="1_wluds"]
[ext_resource type="Script" uid="uid://bsq8qkwwqmuhk" path="res://Scripts/use_item_panel.gd" id="2_x4uvm"]
[ext_resource type="PackedScene" uid="uid://ew425eutsfhw" path="res://Scenes/item_slot.tscn" id="3_w255n"]

[node name="UseItemPanel" type="TextureRect" node_paths=PackedStringArray("item_grid_container")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -198.0
offset_right = 352.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wluds")
script = ExtResource("2_x4uvm")
item_slot = ExtResource("3_w255n")
item_grid_container = NodePath("GridContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 6.0
offset_right = 700.0
offset_bottom = 64.0
theme_override_constants/separation = 222
alignment = 1

[node name="CancelItem" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "CANCEL ITEM USE
"

[node name="UseItem" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "USE ITEM"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -114.0
offset_right = 348.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 45
columns = 10

[connection signal="pressed" from="HBoxContainer/CancelItem" to="." method="_on_cancel_item_pressed"]
[connection signal="pressed" from="HBoxContainer/UseItem" to="." method="_on_use_item_pressed"]
